--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles/main.css">
+  <link rel="shortcut icon" href="/favicon-1.ico">
   <title>Quote Machine</title> 
 </head>
 
