--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </div>
 
-<a id='back-button' onClick='() => window.history.back()'>Back</a>
+<a id='back-button' onClick='goBack()'>Back</a>
   <script type="text/javascript" src="scripts/main.js" >
   </script>
  </body>
