--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <!-- The quote box -->
+  <!-- quote box -->
 
   <div class="well" id="quote-box">
     <p class=text-center id="text-area">
@@ -20,7 +20,7 @@
 
 </div>
 
-<!-- The button container div -->
+<!-- button container div -->
 
 <div class="button-container">
 
