clean up formatting

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="button-container">
 
-  <button class='btn'  id="new-quote-button" onclick="setTimeout(function(){GetValue()}, 400)">A new quote
+  <button class='btn'  id="new-quote-button" onclick="setTimeout(function(){getValue()}, 400)">A new quote
   </button>
   
   <button class='btn'  id="twit-button" onclick="tweetIt()">Tweet it out
