--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <!DOCTYPE html>
+<html lang="en"> 
 
 <html>
 
@@ -7,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles/main.css">
   <link rel="shortcut icon" href="/favicon-1.ico">
   <title>Quote Machine</title> 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" charset=utf-8>
 </head>
 
 <body>
