--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="styles/main.css">
+  <link rel="stylesheet" type="text/css" href="styles/mediaQuery.css">
   <link rel="shortcut icon" href="/favicon-1.ico">
   <title>Quote Machine</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1" charset=utf-8>
