--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <button class='btn'  id="new-quote-button" onclick="setTimeout(function(){getValue()}, 400)">A new quote
   </button>
   
-  <button class='btn'  id="twit-button" onclick="tweetIt()">Tweet it out
+  <button class='btn'  id="twit-button">Tweet it out
   </button>
 
 </div>
