Move goBack function event listener

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </div>
 
-<a id='back-button' onClick='goBack()'>Back</a>
+<a id='back-button'>Back</a>
 
   <script type="text/javascript" src="scripts/main.js" >
   </script>
