Move quote button event listener

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="button-container">
 
-  <button class='btn'  id="new-quote-button" onclick="setTimeout(function(){getValue()}, 400)">A new quote
+  <button class='btn'  id="new-quote-button">A new quote
   </button>
   
   <button class='btn'  id="twit-button">Tweet it out
