--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
 
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 
 <html>
 
-<head>
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
-  <link rel="stylesheet" type="text/css" href="styles/mediaQuery.css">
-  <link rel="shortcut icon" href="/favicon-1.ico">
-  <title>Quote Machine</title> 
-  <meta name="viewport" content="width=device-width, initial-scale=1" charset=utf-8>
-</head>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" charset=utf-8>
+        <link rel="shortcut icon" href="/favicon-1.ico">
+        <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="styles/mediaQuery.css">
+        <title>Quote Machine</title>
+    </head>
 
-<body>
+    <body>
 
-  <!-- Quote box -->
+        <!-- Quote box -->
 
-  <div class="well" id="quote-box">
-    <p class=text-center id="text-area">
-    </p>
+        <div class="well" id="quote-box">
 
-</div>
+            <p class=text-center id="text-area"></p>
 
-<!-- Button container div -->
+        </div>
 
-<div class="button-container">
+        <!-- Button container div -->
 
-  <button class='btn'  id="new-quote-button">A new quote
-  </button>
-  
-  <button class='btn'  id="twit-button">Tweet it out
-  </button>
+        <div class="button-container">
 
-</div>
+            <button class='btn' id="new-quote-button">A new quote</button>
 
-<a id='back-button'>Back</a>
+            <button class='btn' id="twit-button">Tweet it out</button>
 
-  <script type="text/javascript" src="scripts/main.js" >
-  </script>
+        </div>
 
- </body>
+        <a id='back-button'>Back</a>
+
+        <script type="text/javascript" src="scripts/main.js"></script>
+
+    </body>
+
 </html>
