--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--------------------------------------------------------------------------
+** Description: The main html file. The application can be opened by double
+**              clicking on this file to open it in a browser, or by right
+**              clicking on the file and opening it with live server.    
+-------------------------------------------------------------------------->
 
 <!DOCTYPE html>
 <html lang="en">
