--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <body>
 
-        <!-- Quote box -->
+        <!-- Quote box ------------------------------------------------------->
 
         <div class="well" id="quote-box">
 
@@ -27,7 +27,7 @@
 
         </div>
 
-        <!-- Button container div -->
+        <!-- Button container div -------------------------------------------->
 
         <div class="button-container">
 
