add github link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     </head>
 
     <body>
+        <!-- GitHub source code link -->
+        <div id="gh-bar">
+            <a
+                id="gh-link"
+                href="https://github.com/adam4321/Random-Quote-Generator"
+                target="_blank"
+                rel="noopener noreferrer"
+            >
+                <div>Open GitHub repo in a new tab</div>
+            </a>
+        </div>
 
         <!-- Quote box ------------------------------------------------------->
         <div class="well" id="quote-box">
